--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 #vid{ z-index: 2;width:100vw;height: 100px;display: flex; justify-content: center;}
- .v{background-image: url("../images/play.png");width: 100px;height: 100px;} */
+ .v{background-image: url("../images/play.png");width: 100px;height: 100px;} 
 .section3{display: flex;
 justify-content: center;
 align-content: center;
@@ -12,7 +12,8 @@ align-items: center;}
         .sliders{ background-image: url("../images/trees.jpg") ;
             background-repeat: no-repeat;
             background-size: 100vw 100vh;
-        padding-bottom: 100px;}
+        padding-bottom: 100px;
+        width: 100vw;height: 100vh;}
         .slider,.slider,.slider3{
             
             /*background-image: linear-gradient(to right, #09052f 0%, #311d5e 100%);*/
@@ -31,13 +32,13 @@ align-items: center;}
                  
                  /* padding:5%; */
                 }
-        .sliders{width: 100vw;height: 100vh;}
+        /* .sliders{} */
         .slider,.slider3{
             position:absolute;
             top:0;
             opacity: 0;
       transition: all 1s linear;
-      padding-bottom: 100px;
+      /* padding-bottom: 100px; */
         }
         .Story,.Story2{font-family: "Playfair Display";
         font-size: 24px;
@@ -46,13 +47,13 @@ align-items: center;}
         letter-spacing: 1.1px;
         /* margin-left:5px; */
         }
-        .Story2{margin-left:10px;}
+        .Story2{margin-left:10px;margin-top:6px;}
         .TextSec2{
             font-family: Roboto;
 font-size: 18px;
 transition: all 1s linear;
         }
-        .linear{
+        .linear,.linear1{
             width: 100vw;
             height: 100vh;
              background-image: linear-gradient(to right, #09052f 0%, #311d5e 100%);
@@ -89,6 +90,17 @@ transition: all 1s linear;
                 letter-spacing: 0.7px;
                 justify-content: center;text-align:center;align-content: center;flex-direction: column;
             }
+            .Text_Content1{width: 100%;}
+            .Text_Content3{width:100%;
+                height:10%;
+                padding-top: 1vw;
+                color: #ffffff;
+                font-family: Roboto;
+                font-size: 14px;
+                font-weight: 300;
+                line-height: 24px;
+                text-align:start;align-content: flex-start;
+                letter-spacing: 0.7px;}
            #Learnbtn{
                 display: flex;
                 justify-content: center;
@@ -109,8 +121,8 @@ transition: all 1s linear;
                 margin-top:5vh;
                 
             }
-            .Text_Logo1{color:black;width:100vw;font-size: 18px; font-weight: bold;}
-            .Text_Content1{color:black;}
+            .Text_Logo1,.Text_Logo2{color:black;width:100%;font-size: 18px; font-weight: bold;}
+            .Text_Content1,.Text_Content2{color:black;}
            .nav{
                display: flex;
                justify-content: space-between;
@@ -128,8 +140,10 @@ transition: all 1s linear;
         opacity: 0.8;
         background-color: #311d5e;
     }
+    .navbar1{justify-content: space-around;}
 html{
   scroll-behavior: smooth;
+  width: 100%;
 }
 .video{background-image: url("../images/City.jpg"); width: 100vw;height: 100vh;background-repeat: no-repeat; display: flex;background-size: 100vw 100vh;}
 /*.d1{background-image: url("../images/play.jpg");background-color: black;color:black}*/
@@ -137,10 +151,10 @@ html{
 .nv{display: flex;;justify-content: flex-end;}
 }
 video {
-    max-width: 100%;
+    max-width: 100vw;
     height: auto;
   }
-  .block{position:relative;display:flex;justify-content: center;text-align: center;align-content: center;align-items: center;border:0px solid grey;opacity:1;align-self: center; }
+  .block.block1{display:flex;justify-content: center;text-align: center;align-content: center;align-items: center;border:0px solid grey;opacity:1;align-self: center;width: 100%; }
 /* @media only screen and (min-width: 765px){
     .nv{display: flex;;justify-content: flex-start;}
     .Text_Logo{
@@ -158,5 +172,12 @@ video {
         padding-top: 1vw;
         }   
 
-   
+ */  
 .navbar{width:100vw;}  
+body{width:100%;}
+.footer{color:white;}
+.block1{color:white;text-align: start;justify-content: flex-start;}
+.Text_Logo2{color:white;}
+.Text_Content2{color:white;}
+.linear1{height: 100%;opacity:0.9;}
+.footer{background-image: url("../images/Keyboard.jpg");background-size: 100vw 100%;background-repeat: no-repeat;}
